[package]
name = "histogram"
version = "0.11.5"
edition = "2021"
authors = ["Brian Martin <brian@pelikan.io>"]
license = "MIT OR Apache-2.0"
description = "A collection of histogram data structures"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
schemars = { version = "1.2", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0"

[dev-dependencies]
criterion = "0.8"
rand = "0.10"

[features]
schemars = ["dep:schemars", "serde"]
serde = ["dep:serde"]

[[bench]]
name = "histogram"
harness = false
