[package]
name = "switchboard"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Brian Martin <brian@pelikan.io>"]
description = "Enables inter-process communiucation via queues and wakers"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
awaken = { version = "0.3.0", path = "../awaken" }
crossbeam-queue = "0.3.12"
rand = "0.10"
rand_chacha = "0.10"
thiserror = "2.0"

[dev-dependencies]
mio = { version = "1.1", features = ["os-poll"]}
